--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "eslint-config-airbnb": "^17.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-router-page-transition": "^3.1.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "env-cmd .env.development react-scripts start",
