--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
   },
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/fontawesome-svg-core": "1.2.0",
+    "@fortawesome/free-regular-svg-icons": "5.1.0",
+    "@fortawesome/free-solid-svg-icons": "5.1.0",
+    "@fortawesome/react-fontawesome": "0.1.0",
+    "axios": "^0.18.0",
     "env-cmd": "^8.0.2",
     "eslint-config-airbnb": "^17.1.0",
     "react": "^16.8.4",
@@ -19,7 +21,8 @@
     "react-router-dom": "^5.0.0",
     "react-router-page-transition": "^3.1.0",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "env-cmd .env.development react-scripts start",
