--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,15 +1,22 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Matilde Wittrup",
+  "name": "Matilde Wittrup Tutorial Site",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "app-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "app-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
   "display": "standalone",
+  "start_url": "/",
+  "orientation": "any",
+  "lang": "en-UK",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
