--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.18.0",
     "env-cmd": "^8.0.2",
     "eslint-config-airbnb": "^17.1.0",
+    "highlight.js": "^9.15.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-quill": "^1.3.3",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
